--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,20 @@
-body {
-  margin: 0;
-}
+@import 'utils';
+@import './blocks/page';
+@import './blocks/container';
+@import './blocks/header';
+@import './blocks/logo';
+@import './blocks/button';
+@import './blocks/icon';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/schedule';
+@import './blocks/main';
+@import './blocks/section-title';
+@import './blocks/events';
+@import './blocks/exhibition';
+@import './blocks/lecture';
+@import './blocks/signature';
+@import './blocks/gallery';
+@import './blocks/my-swiper';
+@import './blocks/subscribe';
+@import './blocks/footer';
